--- a/index.html
+++ b/index.html
@@ -3,37 +3,95 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>[Your Name] | Data Analyst Portfolio</title>
-  <link rel="stylesheet" href="assets/css/style.css">
+  <title>Varun KV - Data Analyst</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="pages/projects.html">Projects</a></li>
-        <li><a href="pages/about.html">About</a></li>
-        <li><a href="pages/contact.html">Contact</a></li>
+<body class="bg-gray-900 font-sans">
+  <!-- Navigation -->
+  <nav class="bg-blue-900 text-white p-4 sticky top-0 shadow-md">
+    <div class="container mx-auto flex justify-between items-center">
+      <h1 class="text-2xl font-bold">Varun Kammanni</h1>
+      <ul class="flex space-x-4">
+        <li><a href="index.html" class="hover:text-blue-300">Home</a></li>
+        <li><a href="projects.html" class="hover:text-blue-300">Projects</a></li>
+        <li><a href="#contact" class="hover:text-blue-300">Contact</a></li>
       </ul>
-    </nav>
-  </header>
-  inelasticsection class="hero">
-    <h1>Welcome to My Data Analyst Portfolio</h1>
-    <p>Explore my projects in Python, Tableau, SQL, and Excel.</p>
-    <a href="pages/projects.html" class="btn">View Projects</a>
+    </div>
+  </nav>
+
+  <!-- Hero Section -->
+  <section class="bg-gray-800 text-white py-20 text-center">
+    <div class="container mx-auto">
+      <h2 class="text-4xl font-bold mb-4">Varun KV - Data Analyst</h2>
+      <p class="text-lg mb-6">Transforming data into actionable insights with SQL, Python, Tableau, and Power BI.</p>
+      <a href="#resume" class="bg-yellow-400 text-blue-900 px-6 py-3 rounded-full font-semibold hover:bg-yellow-500">View Resume</a>
+    </div>
   </section>
-  <section class="skills">
-    <h2>Skills</h2>
-    <ul>
-      <li>Python (NumPy, Pandas, Matplotlib)</li>
-      <li>Tableau</li>
-      <li>SQL</li>
-      <li>Excel</li>
-    </ul>
+
+  <!-- Bio Section -->
+  <section id="bio" class="py-16 bg-white">
+    <div class="container mx-auto px-4">
+      <h3 class="text-3xl font-bold text-center mb-8">About Me</h3>
+      <div class="flex flex-col md:flex-row items-center">
+        <div class="md:w-1/2 mb-8 md:mb-0">
+          <img src="https://via.placeholder.com/400" alt="Varun KV" class="rounded-lg shadow-lg">
+        </div>
+        <div class="md:w-1/2 md:pl-8">
+          <p class="text-lg mb-4">I am a passionate Data Analyst with extensive experience in VFX and healthcare industries, leveraging SQL, Python, Tableau, and Power BI to drive efficiency and insights. I specialize in optimizing workflows, building dashboards, and presenting data-driven solutions to stakeholders.</p>
+          <p class="text-lg">During my career, I've reduced render queue delays by up to 30%, streamlined ETL processes, and developed analytics tools to enhance decision-making. Certified in AWS and Power BI, I bring a blend of technical expertise and communication skills to deliver impactful results.</p>
+        </div>
+      </div>
+    </div>
   </section>
-  <footer>
-    <p>&copy; 2025 [Your Name]. All rights reserved.</p>
-  </footer>
-  <script src="assets/js/script.js"></script>
+
+  <!-- Resume Summary Section -->
+  <section id="resume" class="py-16 bg-gray-100">
+    <div class="container mx-auto px-4">
+      <h3 class="text-3xl font-bold text-center mb-8">Resume Summary</h3>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+        <div class="bg-white p-6 rounded-lg shadow-md">
+          <h4 class="text-xl font-semibold mb-4">Experience</h4>
+          <p><strong>Data Analyst (VFX)</strong> (2022-Present)</p>
+          <ul class="list-disc ml-5 mb-4">
+            <li>Wrote SQL queries to analyze shot data, reducing render queue delays by 30%.</li>
+            <li>Built Tableau/Power BI dashboards for render farm performance.</li>
+            <li>Used Python (pandas, numpy) for A/B testing and bottleneck analysis.</li>
+          </ul>
+          <p><strong>PMO Analyst | Data Analyst, Cognizant</strong> (2014-2020)</p>
+          <ul class="list-disc ml-5">
+            <li>Supported Healthnet with SQL and BI tools, reducing query times by 20%.</li>
+            <li>Developed Python analytics tools for patient behavior insights.</li>
+            <li>Managed IT infrastructure, ensuring 90% uptime.</li>
+          </ul>
+        </div>
+        <div class="bg-white p-6 rounded-lg shadow-md">
+          <h4 class="text-xl font-semibold mb-4">Education & Certifications</h4>
+          <p><strong>Master's Degree</strong>, University of West London (2019-20)</p>
+          <p><strong>Bachelor of Engineering</strong>, VTU (2014)</p>
+          <ul class="list-disc ml-5 mt-4">
+            <li>AWS Certified Solutions Architect - Associate</li>
+            <li>Microsoft Certified: Power BI Data Analyst Associate</li>
+            <li>Fundamentals of Artificial Intelligence by IBM</li>
+            <li>Cognizant Certification: Python, Unix/Linux, SQL</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact" class="py-16 bg-blue-900 text-white text-center">
+    <div class="container mx-auto px-4">
+      <h3 class="text-3xl font-bold mb-8">Get in Touch</h3>
+      <p class="text-lg mb-6">Interested in collaborating? Reach out via email or LinkedIn.</p>
+      <div class="flex justify-center space-x-4">
+        <a href="mailto:varun@example.com" class="bg-yellow-400 text-blue-900 px-6 py-3 rounded-full font-semibold hover:bg-yellow-500">Email Me</a>
+        <a href="https://linkedin.com/in/varunkv" class="bg-yellow-400 text-blue-900 px-6 py-3 rounded-full font-semibold hover:bg-yellow-500">LinkedIn</a>
+      </div>
+    </div>
+  </section>
+
+  <script src="script.js"></script>
 </body>
 </html>
