--- a/pages/index.html
+++ b/pages/index.html
@@ -3,36 +3,74 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Projects | [Your Name]</title>
-  <link rel="stylesheet" href="../assets/css/style.css">
+  <title>Projects - Varun KV</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
+<body class="bg-gray-100 font-sans">
+  <!-- Navigation -->
+  <nav class="bg-blue-900 text-white p-4 sticky top-0 shadow-md">
+    <div class="container mx-auto flex justify-between items-center">
+      <h1 class="text-2xl font-bold">Varun KV</h1>
+      <ul class="flex space-x-4">
+        <li><a href="index.html" class="hover:text-blue-300">Home</a></li>
+        <li><a href="projects.html" class="hover:text-blue-300">Projects</a></li>
+        <li><a href="#contact" class="hover:text-blue-300">Contact</a></li>
       </ul>
-    </nav>
-  </header>
-  <section class="projects">
-    <h1>My Projects</h1>
-    <div class="project-grid">
-      <div class="project">
-        <h3>Project 1: [Project Name]</h3>
-        <img src="../assets/img/project1-screenshot.png" alt="Project 1 Screenshot">
-        <p>Analysis using Python (Pandas, Matplotlib) on [Kaggle dataset].</p>
-        <a href="https://github.com/yourusername/project-name" class="btn">View Code</a>
-        <a href="[Tableau Public URL]" class="btn">View Dashboard</a>
+    </div>
+  </nav>
+
+  <!-- Projects Section -->
+  <section class="py-16 bg-white">
+    <div class="container mx-auto px-4">
+      <h3 class="text-3xl font-bold text-center mb-8">Projects</h3>
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+        <!-- Python Project -->
+        <div class="bg-gray-100 p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
+          <h4 class="text-xl font-semibold mb-2">Python Analytics Tool</h4>
+          <p class="text-gray-700 mb-4">Developed a Python tool using pandas and numpy to analyze patient behavior data for Healthnet, optimizing healthcare service strategies.</p>
+          <p class="text-sm text-gray-500">Technologies: Python, pandas, numpy, matplotlib</p>
+        </div>
+        <!-- Tableau Project -->
+        <div class="bg-gray-100 p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
+          <h4 class="text-xl font-semibold mb-2">Tableau Render Farm Dashboard</h4>
+          <p class="text-gray-700 mb-4">Built interactive Tableau dashboards to visualize VFX render farm performance and project timelines, improving resource allocation.</p>
+          <p class="text-sm text-gray-500">Technologies: Tableau, SQL</p>
+        </div>
+        <!-- SQL Project -->
+        <div class="bg-gray-100 p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
+          <h4 class="text-xl font-semibold mb-2">SQL VFX Asset Optimization</h4>
+          <p class="text-gray-700 mb-4">Wrote SQL queries to clean and optimize VFX asset metadata, ensuring accurate tracking for 65+ artists and supervisors.</p>
+          <p class="text-sm text-gray-500">Technologies: SQL, PostgreSQL, MySQL</p>
+        </div>
+        <!-- Power BI Project -->
+        <div class="bg-gray-100 p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
+          <h4 class="text-xl font-semibold mb-2">Power BI Healthnet Insights</h4>
+          <p class="text-gray-700 mb-4">Created Power BI dashboards for Healthnet user data, enabling 500+ client users to gain actionable insights.</p>
+          <p class="text-sm text-gray-500">Technologies: Power BI, SQL</p>
+        </div>
+        <!-- Automation Project -->
+        <div class="bg-gray-100 p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
+          <h4 class="text-xl font-semibold mb-2">ServiceNow Workflow Automation</h4>
+          <p class="text-gray-700 mb-4">Automated ServiceNow workflows to streamline project documentation and reporting, enhancing PMO efficiency.</p>
+          <p class="text-sm text-gray-500">Technologies: ServiceNow, Python, SQL</p>
+        </div>
       </div>
-      <!-- Add more project divs as needed -->
     </div>
   </section>
-  <footer>
-    <p>&copy; 2025 [Your Name]. All rights reserved.</p>
-  </footer>
-  <script src="../assets/js/script.js"></script>
+
+  <!-- Contact Section -->
+  <section id="contact" class="py-16 bg-blue-900 text-white text-center">
+    <div class="container mx-auto px-4">
+      <h3 class="text-3xl font-bold mb-8">Get in Touch</h3>
+      <p class="text-lg mb-6">Interested in collaborating? Reach out via email or LinkedIn.</p>
+      <div class="flex justify-center space-x-4">
+        <a href="mailto:varun@example.com" class="bg-yellow-400 text-blue-900 px-6 py-3 rounded-full font-semibold hover:bg-yellow-500">Email Me</a>
+        <a href="https://linkedin.com/in/varunkv" class="bg-yellow-400 text-blue-900 px-6 py-3 rounded-full font-semibold hover:bg-yellow-500">LinkedIn</a>
+      </div>
+    </div>
+  </section>
+
+  <script src="script.js"></script>
 </body>
 </html>
