--- a/pages/index.html
+++ b/pages/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Projects - Varun KV</title>
+  <title>Varun KV - Data Analyst</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
-<body class="bg-gray-100 font-sans">
+<body class="bg-gray-900 font-sans">
   <!-- Navigation -->
   <nav class="bg-blue-900 text-white p-4 sticky top-0 shadow-md">
     <div class="container mx-auto flex justify-between items-center">
-      <h1 class="text-2xl font-bold">Varun KV</h1>
+      <h1 class="text-2xl font-bold">Varun Kammanni</h1>
       <ul class="flex space-x-4">
         <li><a href="index.html" class="hover:text-blue-300">Home</a></li>
         <li><a href="projects.html" class="hover:text-blue-300">Projects</a></li>
@@ -20,62 +20,61 @@
     </div>
   </nav>
 
-  <!-- Projects Section -->
-  <section class="py-16 bg-white">
+  <!-- Hero Section -->
+  <section class="bg-gray-800 text-white py-20 text-center">
+    <div class="container mx-auto">
+      <h2 class="text-4xl font-bold mb-4">Varun KV - Data Analyst</h2>
+      <p class="text-lg mb-6">Transforming data into actionable insights with SQL, Python, Tableau, and Power BI.</p>
+      <a href="#resume" class="bg-yellow-400 text-blue-900 px-6 py-3 rounded-full font-semibold hover:bg-yellow-500">View Resume</a>
+    </div>
+  </section>
+
+  <!-- Bio Section -->
+  <section id="bio" class="py-16 bg-white">
     <div class="container mx-auto px-4">
-      <h3 class="text-3xl font-bold text-center mb-8">Projects</h3>
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-        <!-- Python Project -->
-        <div class="bg-gray-100 p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
-          <h4 class="text-xl font-semibold mb-2">Python Analytics Tool</h4>
-          <p class="text-gray-700 mb-4">Developed a Python tool using pandas and numpy to analyze patient behavior data for Healthnet, optimizing healthcare service strategies.</p>
-          <p class="text-sm text-gray-500">Technologies: Python, pandas, numpy, matplotlib</p>
+      <h3 class="text-3xl font-bold text-center mb-8">About Me</h3>
+      <div class="flex flex-col md:flex-row items-center">
+        <div class="md:w-1/2 mb-8 md:mb-0">
+          <img src="https://via.placeholder.com/400" alt="Varun KV" class="rounded-lg shadow-lg">
         </div>
-        <!-- Tableau Project -->
-        <div class="bg-gray-100 p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
-          <h4 class="text-xl font-semibold mb-2">Tableau World Demo Animation</h4>
-          <p class="text-gray-700 mb-4">Created an interactive Tableau visualization showcasing global data trends with animations, enabling dynamic exploration of insights.</p>
-          <div class="tableauPlaceholder" id="viz1751991554074" style="position: relative">
-            <noscript>
-              <a href="https://public.tableau.com/views/Section_5_World_Demo/Animation">
-                <img alt="Animation - 1999" src="https://public.tableau.com/static/images/Se/Section_5_World_Demo/Animation/1_rss.png" style="border: none" />
-              </a>
-            </noscript>
-            <object class="tableauViz" style="display:none;">
-              <param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F" />
-              <param name="embed_code_version" value="3" />
-              <param name="site_root" value="" />
-              <param name="name" value="Section_5_World_Demo/Animation" />
-              <param name="tabs" value="no" />
-              <param name="toolbar" value="yes" />
-              <param name="static_image" value="https://public.tableau.com/static/images/Se/Section_5_World_Demo/Animation/1.png" />
-              <param name="animate_transition" value="yes" />
-              <param name="display_static_image" value="yes" />
-              <param name="display_spinner" value="yes" />
-              <param name="display_overlay" value="yes" />
-              <param name="display_count" value="yes" />
-              <param name="language" value="en-GB" />
-            </object>
-          </div>
-          <p class="text-sm text-gray-500 mt-4">Technologies: Tableau, SQL</p>
+        <div class="md:w-1/2 md:pl-8">
+          <p class="text-lg mb-4">I am a passionate Data Analyst with extensive experience in VFX and healthcare industries, leveraging SQL, Python, Tableau, and Power BI to drive efficiency and insights. I specialize in optimizing workflows, building dashboards, and presenting data-driven solutions to stakeholders.</p>
+          <p class="text-lg">During my career, I've reduced render queue delays by up to 30%, streamlined ETL processes, and developed analytics tools to enhance decision-making. Certified in AWS and Power BI, I bring a blend of technical expertise and communication skills to deliver impactful results.</p>
         </div>
-        <!-- SQL Project -->
-        <div class="bg-gray-100 p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
-          <h4 class="text-xl font-semibold mb-2">SQL VFX Asset Optimization</h4>
-          <p class="text-gray-700 mb-4">Wrote SQL queries to clean and optimize VFX asset metadata, ensuring accurate tracking for 65+ artists and supervisors.</p>
-          <p class="text-sm text-gray-500">Technologies: SQL, PostgreSQL, MySQL</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Resume Summary Section -->
+  <section id="resume" class="py-16 bg-gray-100">
+    <div class="container mx-auto px-4">
+      <h3 class="text-3xl font-bold text-center mb-8">Resume Summary</h3>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+        <div class="bg-white p-6 rounded-lg shadow-md">
+          <h4 class="text-xl font-semibold mb-4">Experience</h4>
+          <p><strong>Data Analyst (VFX)</strong> (2022-Present)</p>
+          <ul class="list-disc ml-5 mb-4">
+            <li>Wrote SQL queries to analyze shot data, reducing render queue delays by 30%.</li>
+            <li>Built Tableau/Power BI dashboards for render farm performance.</li>
+            <li>Used Python (pandas, numpy) for A/B testing and bottleneck analysis.</li>
+          </ul>
+          <p><strong>PMO Analyst | Data Analyst, Cognizant</strong> (2014-2020)</p>
+          <ul class="list-disc ml-5">
+            <li>Supported Healthnet with SQL and BI tools, reducing query times by 20%.</li>
+            <li>Developed Python analytics tools for patient behavior insights.</li>
+            <li>Managed IT infrastructure, ensuring 90% uptime.</li>
+          </ul>
         </div>
-        <!-- Power BI Project -->
-        <div class="bg-gray-100 p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
-          <h4 class="text-xl font-semibold mb-2">Power BI Healthnet Insights</h4>
-          <p class="text-gray-700 mb-4">Created Power BI dashboards for Healthnet user data, enabling 500+ client users to gain actionable insights.</p>
-          <p class="text-sm text-gray-500">Technologies: Power BI, SQL</p>
-        </div>
-        <!-- Automation Project -->
-        <div class="bg-gray-100 p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow">
-          <h4 class="text-xl font-semibold mb-2">ServiceNow Workflow Automation</h4>
-          <p class="text-gray-700 mb-4">Automated ServiceNow workflows to streamline project documentation and reporting, enhancing PMO efficiency.</p>
-          <p class="text-sm text-gray-500">Technologies: ServiceNow, Python, SQL</p>
+        <div class="bg-white p-6 rounded-lg shadow-md">
+          <h4 class="text-xl font-semibold mb-4">Education & Certifications</h4>
+          <p><strong>Master's Degree</strong>, University of West London (2019-20)</p>
+          <p><strong>Bachelor of Engineering</strong>, VTU (2014)</p>
+          <ul class="list-disc ml-5 mt-4">
+            <li>AWS Certified Solutions Architect - Associate</li>
+            <li>Microsoft Certified: Power BI Data Analyst Associate</li>
+            <li>Fundamentals of Artificial Intelligence by IBM</li>
+            <li>Cognizant Certification: Python, Unix/Linux, SQL</li>
+          </ul>
         </div>
       </div>
     </div>
@@ -94,21 +93,5 @@
   </section>
 
   <script src="script.js"></script>
-  <script type="text/javascript">
-    document.addEventListener('DOMContentLoaded', () => {
-      const divElement = document.getElementById('viz1751991554074');
-      const vizElement = divElement.getElementsByTagName('object')[0];
-      vizElement.style.width = '100%';
-      vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
-      const scriptElement = document.createElement('script');
-      scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-      vizElement.parentNode.insertBefore(scriptElement, vizElement);
-
-      // Adjust height on window resize for responsiveness
-      window.addEventListener('resize', () => {
-        vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
-      });
-    });
-  </script>
 </body>
 </html>
