--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Varun Kammanni4 - Data Analyst</title>
+  <title>Varun Kammanni - Data Analyst</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link href="../styles.css" rel="stylesheet">
   <style>
@@ -13,10 +13,10 @@
     }
   </style>
 </head>
-<body class="bg-gray-50 font-sans text-gray-800">
-  <nav class="bg-blue-900 text-white p-4 shadow-md">
+<body class="bg-gray-50 font-sans text-white">
+  <nav class="bg-black text-white p-4 shadow-md">
     <div class="container mx-auto flex justify-between items-center">
-      <h1 class="text-2xl font-bold">Varun KV</h1>
+      <h1 class="text-2xl font-bold">Varun Kammanni</h1>
       <ul class="flex space-x-6">
         <li><a href="pages/" class="hover:text-yellow-300">Home</a></li>
         <li><a href="pages/projects.html" class="hover:text-yellow-300">Projects</a></li>
@@ -25,9 +25,9 @@
     </div>
   </nav>
 
-  <section class="bg-blue-900 text-white py-24 shadow-xl rounded-lg mt-8 mb-8">
+  <section class="bg-gray-800 text-white py-24 shadow-xl rounded-lg mt-8 mb-8">
     <div class="container mx-auto text-center">
-      <h2 class="text-5xl font-extrabold mb-4">Varun KV</h2>
+      <h2 class="text-5xl font-extrabold mb-4">Varun Kammanni</h2>
       <p class="text-xl mb-6">Data Analyst & Insights Expert</p>
       <a href="#about" class="bg-yellow-400 text-blue-900 px-8 py-3 rounded-lg font-semibold hover:bg-yellow-500 transition">Learn More</a>
     </div>
@@ -41,8 +41,8 @@
           <img src="../assets/placeholder.png" alt="Varun KV" class="rounded-lg shadow-xl mx-auto w-3/4 lg:w-full">
         </div>
         <div class="w-full lg:w-1/2 text-center lg:text-left">
-          <p class="text-lg mb-4">I am a dedicated Data Analyst with a strong background in VFX and healthcare, utilizing SQL, Python, Tableau, and Power BI to deliver actionable insights. My expertise lies in optimizing workflows and creating impactful dashboards.</p>
-          <p class="text-lg">With a track record of reducing render delays by 30% and enhancing ETL processes, I bring AWS and Power BI certifications to provide data-driven solutions with clear communication to non-technical stakeholders.</p>
+          <p class="text-lg mb-4">Experienced Data Analyst with over 6 years of combined expertise in project management and data analysis, with a strong focus on the healthcare, staffing, retail, and finance industries. Skilled in SQL, Python, Tableau, and Power BI, I specialize in uncovering actionable insights, streamlining operations, and building impactful dashboards that drive informed decision-making.</p>
+          <p class="text-lg"> I have a proven track record of reducing render delays by 30% and enhancing ETL processes for better performance and efficiency. Certified in AWS and Tableau, I bring a data-driven mindset combined with the ability to communicate findings effectively to both technical and non-technical stakeholders.</p>
         </div>
       </div>
     </div>
