New Tableau projects
adding to the page

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -14,7 +14,7 @@
   </style>
 </head>
 <body class="bg-gray-50 font-sans text-gray-800">
-  <nav class="bg-blue-900 text-white p-4 shadow-md">
+  <nav class="bg-black text-white p-4 shadow-md">
     <div class="container mx-auto flex justify-between items-center">
       <h1 class="text-2xl font-bold">Varun KV</h1>
       <ul class="flex space-x-6">
@@ -37,6 +37,31 @@
             <object class="tableauViz" style="display:none;"><param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F" /><param name="embed_code_version" value="3" /><param name="site_root" value="" /><param name="name" value="Section_5_World_Demo/Animation" /><param name="tabs" value="no" /><param name="toolbar" value="yes" /><param name="static_image" value="https://public.tableau.com/static/images/Se/Section_5_World_Demo/Animation/1.png" /><param name="animate_transition" value="yes" /><param name="display_static_image" value="yes" /><param name="display_spinner" value="yes" /><param name="display_overlay" value="yes" /><param name="display_count" value="yes" /><param name="language" value="en-GB" /></object></div>
           <p class="text-sm text-teal-600 mt-4">Technologies: Tableau, SQL</p>
         </div>
+        <!-- Project 2 -->
+        <div class="bg-gray-50 p-6 rounded-lg shadow-md hover:shadow-lg transition w-full max-w-2xl">
+          <h4 class="text-xl font-semibold text-blue-900 mb-2">Global Insights Dashboard</h4>
+          <p class="text-gray-700 mb-4">A Tableau dashboard providing interactive global insights and analytics, allowing users to explore data trends and patterns across multiple dimensions. <a href="https://public.tableau.com/shared/5GB6ZPWHF?:display_count=n&:origin=viz_share_link" class="text-blue-700 underline" target="_blank">View on Tableau Public</a></p>
+          <div class="tableauPlaceholder" id="viz2" style="position: relative">
+            <noscript><a href="https://public.tableau.com/shared/5GB6ZPWHF?:display_count=n&:origin=viz_share_link"><img alt="Global Insights Dashboard" src="https://public.tableau.com/static/images/5G/5GB6ZPWHF/1.png" style="border: none" /></a></noscript>
+            <object class="tableauViz" style="display:none;"><param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F" /><param name="embed_code_version" value="3" /><param name="site_root" value="" /><param name="name" value="5GB6ZPWHF" /><param name="tabs" value="no" /><param name="toolbar" value="yes" /><param name="static_image" value="https://public.tableau.com/static/images/5G/5GB6ZPWHF/1.png" /><param name="animate_transition" value="yes" /><param name="display_static_image" value="yes" /><param name="display_spinner" value="yes" /><param name="display_overlay" value="yes" /><param name="display_count" value="yes" /><param name="language" value="en-GB" /></object></div>
+          <p class="text-sm text-teal-600 mt-4">Technologies: Tableau, Data Visualization</p>
+        </div>
+        <!-- Project 3 -->
+        <div class="bg-gray-50 p-6 rounded-lg shadow-md hover:shadow-lg transition w-full max-w-2xl">
+          <h4 class="text-xl font-semibold text-blue-900 mb-2">Clothes Industry Australia</h4>
+          <p class="text-gray-700 mb-4">An in-depth Tableau presentation analyzing the Australian clothes industry, featuring interactive charts and business insights. <a href="https://public.tableau.com/views/Section_4_Clothes_Industry_Australia/FinalPresentation?:language=en-GB&publish=yes&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" class="text-blue-700 underline" target="_blank">View on Tableau Public</a></p>
+          <div class="tableauPlaceholder" id="viz3" style="position: relative">
+            <noscript><a href="https://public.tableau.com/views/Section_4_Clothes_Industry_Australia/FinalPresentation?:language=en-GB&publish=yes&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link"><img alt="Clothes Industry Australia" src="https://public.tableau.com/static/images/Se/Section_4_Clothes_Industry_Australia/FinalPresentation/1.png" style="border: none" /></a></noscript>
+            <object class="tableauViz" style="display:none;"><param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F" /><param name="embed_code_version" value="3" /><param name="site_root" value="" /><param name="name" value="Section_4_Clothes_Industry_Australia/FinalPresentation" /><param name="tabs" value="no" /><param name="toolbar" value="yes" /><param name="static_image" value="https://public.tableau.com/static/images/Se/Section_4_Clothes_Industry_Australia/FinalPresentation/1.png" /><param name="animate_transition" value="yes" /><param name="display_static_image" value="yes" /><param name="display_spinner" value="yes" /><param name="display_overlay" value="yes" /><param name="display_count" value="yes" /><param name="language" value="en-GB" /></object></div>
+          <p class="text-sm text-teal-600 mt-4">Technologies: Tableau, Business Analytics</p>
+        </div>
+        <!-- Project 4 (placeholder for future) -->
+        <div class="bg-gray-50 p-6 rounded-lg shadow-md hover:shadow-lg transition w-full max-w-2xl">
+          <h4 class="text-xl font-semibold text-blue-900 mb-2">Additional Tableau Project</h4>
+          <p class="text-gray-700 mb-4">A future Tableau project will be showcased here. Stay tuned for more interactive data stories and dashboards.</p>
+          <div class="tableauPlaceholder" style="position: relative; min-height: 200px; background: #e0e7ef; display: flex; align-items: center; justify-content: center; color: #1e3a8a; font-weight: 600;">Coming Soon</div>
+          <p class="text-sm text-teal-600 mt-4">Technologies: Tableau</p>
+        </div>
       </div>
     </div>
   </section>
@@ -55,15 +80,48 @@
   <script src="../script.js"></script>
   <script type="text/javascript">
     document.addEventListener('DOMContentLoaded', () => {
-      const divElement = document.getElementById('viz1751991554074');
-      const vizElement = divElement.getElementsByTagName('object')[0];
-      vizElement.style.width = '100%';
-      vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
-      const scriptElement = document.createElement('script');
-      scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-      vizElement.parentNode.insertBefore(scriptElement, vizElement);
+      // Project 1
+      const divElement1 = document.getElementById('viz1751991554074');
+      const vizElement1 = divElement1.getElementsByTagName('object')[0];
+      vizElement1.style.width = '100%';
+      vizElement1.style.height = (divElement1.offsetWidth * 0.75) + 'px';
+      const scriptElement1 = document.createElement('script');
+      scriptElement1.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+      vizElement1.parentNode.insertBefore(scriptElement1, vizElement1);
+      // Project 2
+      const divElement2 = document.getElementById('viz2');
+      if (divElement2) {
+        const vizElement2 = divElement2.getElementsByTagName('object')[0];
+        vizElement2.style.width = '100%';
+        vizElement2.style.height = (divElement2.offsetWidth * 0.75) + 'px';
+        const scriptElement2 = document.createElement('script');
+        scriptElement2.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+        vizElement2.parentNode.insertBefore(scriptElement2, vizElement2);
+      }
+      // Project 3
+      const divElement3 = document.getElementById('viz3');
+      if (divElement3) {
+        const vizElement3 = divElement3.getElementsByTagName('object')[0];
+        vizElement3.style.width = '100%';
+        vizElement3.style.height = (divElement3.offsetWidth * 0.75) + 'px';
+        const scriptElement3 = document.createElement('script');
+        scriptElement3.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+        vizElement3.parentNode.insertBefore(scriptElement3, vizElement3);
+      }
+      // Responsive resize for all
+      function resizeViz(divId) {
+        const div = document.getElementById(divId);
+        if (div) {
+          const obj = div.getElementsByTagName('object')[0];
+          if (obj) {
+            obj.style.height = (div.offsetWidth * 0.75) + 'px';
+          }
+        }
+      }
       window.addEventListener('resize', () => {
-        vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+        resizeViz('viz1751991554074');
+        resizeViz('viz2');
+        resizeViz('viz3');
       });
     });
   </script>
