--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     }
   </style>
 </head>
-<body class="bg-gray-50 font-sans text-white">
+<body class="bg-gray-50 font-sans text-black">
   <nav class="bg-black text-white p-4 shadow-md">
     <div class="container mx-auto flex justify-between items-center">
       <h1 class="text-2xl font-bold">Varun Kammanni</h1>
