--- a/pages/index.html
+++ b/pages/index.html
@@ -3,14 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Varun KV - Data Analyst</title>
+  <title>Varun Kammanni - Data Analyst</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link href="../styles.css" rel="stylesheet">
+  <style>
+    nav {
+      backdrop-filter: blur(8px);
+      -webkit-backdrop-filter: blur(8px);
+    }
+  </style>
 </head>
-<body class="bg-gray-50 font-sans text-gray-800">
-  <nav class="bg-blue-900 text-white p-4 shadow-md">
+<body class="bg-gray-50 font-sans text-black">
+  <nav class="bg-black text-white p-4 shadow-md">
     <div class="container mx-auto flex justify-between items-center">
-      <h1 class="text-2xl font-bold">Varun KV</h1>
+      <h1 class="text-2xl font-bold">Varun Kammanni</h1>
       <ul class="flex space-x-6">
         <li><a href="pages/" class="hover:text-yellow-300">Home</a></li>
         <li><a href="pages/projects.html" class="hover:text-yellow-300">Projects</a></li>
@@ -19,15 +25,15 @@
     </div>
   </nav>
 
-  <section class="bg-blue-900 text-white py-24">
+  <section class="bg-gray-800 text-white py-24 shadow-xl rounded-lg mt-8 mb-8">
     <div class="container mx-auto text-center">
-      <h2 class="text-5xl font-extrabold mb-4">Varun KV</h2>
+      <h2 class="text-5xl font-extrabold mb-4">Varun Kammanni</h2>
       <p class="text-xl mb-6">Data Analyst & Insights Expert</p>
       <a href="#about" class="bg-yellow-400 text-blue-900 px-8 py-3 rounded-lg font-semibold hover:bg-yellow-500 transition">Learn More</a>
     </div>
   </section>
 
-  <section id="about" class="py-20 bg-gray-100">
+  <section id="about" class="py-20 bg-gray-100 shadow-md rounded-lg mt-8 mb-8">
     <div class="container mx-auto px-6">
       <h3 class="text-4xl font-bold text-center text-blue-900 mb-12">About Me</h3>
       <div class="flex flex-col lg:flex-row items-center justify-center gap-10">
@@ -35,14 +41,14 @@
           <img src="../assets/placeholder.png" alt="Varun KV" class="rounded-lg shadow-xl mx-auto w-3/4 lg:w-full">
         </div>
         <div class="w-full lg:w-1/2 text-center lg:text-left">
-          <p class="text-lg mb-4">I am a dedicated Data Analyst with a strong background in VFX and healthcare, utilizing SQL, Python, Tableau, and Power BI to deliver actionable insights. My expertise lies in optimizing workflows and creating impactful dashboards.</p>
-          <p class="text-lg">With a track record of reducing render delays by 30% and enhancing ETL processes, I bring AWS and Power BI certifications to provide data-driven solutions with clear communication to non-technical stakeholders.</p>
+          <p class="text-lg mb-4">Experienced Data Analyst with over 6 years of combined expertise in project management and data analysis, with a strong focus on the healthcare, staffing, retail, and finance industries. Skilled in SQL, Python, Tableau, and Power BI, I specialize in uncovering actionable insights, streamlining operations, and building impactful dashboards that drive informed decision-making.</p>
+          <p class="text-lg"> I have a proven track record of reducing render delays by 30% and enhancing ETL processes for better performance and efficiency. Certified in AWS and Tableau, I bring a data-driven mindset combined with the ability to communicate findings effectively to both technical and non-technical stakeholders.</p>
         </div>
       </div>
     </div>
   </section>
 
-  <section id="resume" class="py-20 bg-white">
+  <section id="resume" class="py-20 bg-white shadow-md rounded-lg mt-8 mb-8">
     <div class="container mx-auto px-6">
       <h3 class="text-4xl font-bold text-center text-teal-700 mb-12">Resume Summary</h3>
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-10 justify-items-center">
@@ -76,7 +82,7 @@
     </div>
   </section>
 
-  <section id="contact" class="py-20 bg-teal-700 text-white">
+  <section id="contact" class="py-20 bg-teal-700 text-white shadow-xl rounded-lg mt-8 mb-8">
     <div class="container mx-auto px-6 text-center">
       <h3 class="text-4xl font-bold mb-8">Get in Touch</h3>
       <p class="text-lg mb-6">Ready to collaborate? Connect with me!</p>
