--- a/pages/index.html
+++ b/pages/index.html
@@ -25,26 +25,16 @@
     </div>
   </nav>
 
-  <section class="bg-gray-800 text-white py-24 shadow-xl rounded-lg mt-8 mb-8">
-    <div class="container mx-auto text-center">
-      <h2 class="text-5xl font-extrabold mb-4">Varun Kammanni</h2>
-      <p class="text-xl mb-6">Data Analyst & Insights Expert</p>
-      <a href="#about" class="bg-yellow-400 text-blue-900 px-8 py-3 rounded-lg font-semibold hover:bg-yellow-500 transition">Learn More</a>
-    </div>
-  </section>
-
-  <section id="about" class="py-20 bg-gray-100 shadow-md rounded-lg mt-8 mb-8">
-    <div class="container mx-auto px-6">
-      <h3 class="text-4xl font-bold text-center text-blue-900 mb-12">About Me</h3>
-      <div class="flex flex-col lg:flex-row items-center justify-center gap-10">
-        <div class="w-full lg:w-1/2">
-          <img src="../assets/placeholder.png" alt="Varun KV" class="rounded-lg shadow-xl mx-auto w-3/4 lg:w-full">
-        </div>
-        <div class="w-full lg:w-1/2 text-center lg:text-left">
-          <p class="text-lg mb-4">Experienced Data Analyst with over 6 years of combined expertise in project management and data analysis, with a strong focus on the healthcare, staffing, retail, and finance industries. Skilled in SQL, Python, Tableau, and Power BI, I specialize in uncovering actionable insights, streamlining operations, and building impactful dashboards that drive informed decision-making.</p>
-          <p class="text-lg"> I have a proven track record of reducing render delays by 30% and enhancing ETL processes for better performance and efficiency. Certified in AWS and Tableau, I bring a data-driven mindset combined with the ability to communicate findings effectively to both technical and non-technical stakeholders.</p>
-        </div>
+  <section class="flex justify-center items-center min-h-[80vh]">
+    <div class="bg-gray-800 text-white shadow-xl rounded-2xl p-12 max-w-3xl w-full flex flex-col items-center">
+      <img src="assets/img/placeholder.png" alt="Varun KV" class="rounded-lg shadow-xl mx-auto w-40 h-40 object-cover mb-8 border-4 border-gray-700">
+      <h2 class="text-4xl font-extrabold mb-4 text-center">Varun Kammanni</h2>
+      <p class="text-xl mb-6 text-center font-semibold">Data Analyst & Insights Expert</p>
+      <div class="text-center">
+        <p class="text-lg mb-4">Experienced Data Analyst with over 6 years of combined expertise in project management and data analysis, with a strong focus on the healthcare, staffing, retail, and finance industries. Skilled in SQL, Python, Tableau, and Power BI, I specialize in uncovering actionable insights, streamlining operations, and building impactful dashboards that drive informed decision-making.</p>
+        <p class="text-lg"> I have a proven track record of reducing render delays by 30% and enhancing ETL processes for better performance and efficiency. Certified in AWS and Tableau, I bring a data-driven mindset combined with the ability to communicate findings effectively to both technical and non-technical stakeholders.</p>
       </div>
+      <a href="pages/projects.html" class="mt-10 bg-yellow-400 text-blue-900 px-10 py-4 rounded-lg font-bold text-lg shadow-md transition-transform duration-200 hover:scale-110 hover:bg-yellow-500 focus:outline-none focus:ring-2 focus:ring-yellow-300">Projects</a>
     </div>
   </section>
 
@@ -82,13 +72,13 @@
     </div>
   </section>
 
-  <section id="contact" class="py-20 bg-teal-700 text-white shadow-xl rounded-lg mt-8 mb-8">
+  <section id="contact" class="py-20 bg-teal-700 text-black shadow-xl rounded-lg mt-8 mb-8">
     <div class="container mx-auto px-6 text-center">
       <h3 class="text-4xl font-bold mb-8">Get in Touch</h3>
       <p class="text-lg mb-6">Ready to collaborate? Connect with me!</p>
       <div class="flex justify-center space-x-6">
-        <a href="mailto:varun@example.com" class="bg-yellow-400 text-blue-900 px-6 py-3 rounded-lg font-semibold hover:bg-yellow-500 transition">Email</a>
-        <a href="https://linkedin.com/in/varunkv" class="bg-yellow-400 text-blue-900 px-6 py-3 rounded-lg font-semibold hover:bg-yellow-500 transition">LinkedIn</a>
+        <a href="mailto:varunkammanni@gmail.com" class="bg-yellow-400 text-blue-900 px-6 py-3 rounded-lg font-semibold hover:bg-yellow-500 transition">Email</a>
+        <a href="https://www.linkedin.com/in/varunkammanni/" class="bg-yellow-400 text-blue-900 px-6 py-3 rounded-lg font-semibold hover:bg-yellow-500 transition">LinkedIn</a>
       </div>
     </div>
   </section>
