--- a/pages/projects.html
+++ b/pages/projects.html
@@ -77,13 +77,13 @@
     </div>
   </section>
 
-  <section id="contact" class="py-20 bg-teal-700 text-white shadow-xl rounded-lg mt-8 mb-8">
+  <section id="contact" class="py-20 bg-teal-700 text-black shadow-xl rounded-lg mt-8 mb-8">
     <div class="container mx-auto px-6 text-center">
       <h3 class="text-4xl font-bold mb-8">Get in Touch</h3>
       <p class="text-lg mb-6">Ready to collaborate? Connect with me!</p>
       <div class="flex justify-center space-x-6">
-        <a href="mailto:varun@example.com" class="bg-yellow-400 text-blue-900 px-6 py-3 rounded-lg font-semibold hover:bg-yellow-500 transition">Email</a>
-        <a href="https://linkedin.com/in/varunkv" class="bg-yellow-400 text-blue-900 px-6 py-3 rounded-lg font-semibold hover:bg-yellow-500 transition">LinkedIn</a>
+        <a href="mailto:varunkammanni@gmail.com" class="bg-yellow-400 text-blue-900 px-6 py-3 rounded-lg font-semibold hover:bg-yellow-500 transition">Email</a>
+        <a href="https://www.linkedin.com/in/varunkammanni/" class="bg-yellow-400 text-blue-900 px-6 py-3 rounded-lg font-semibold hover:bg-yellow-500 transition">LinkedIn</a>
       </div>
     </div>
   </section>
