--- a/pages/projects.html
+++ b/pages/projects.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Projects - Varun KV</title>
+  <title>Projects - Varun Kammanni</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link href="../styles.css" rel="stylesheet">
   <style>
@@ -16,7 +16,7 @@
 <body class="bg-gray-50 font-sans text-gray-800">
   <nav class="bg-black text-white p-4 shadow-md">
     <div class="container mx-auto flex justify-between items-center">
-      <h1 class="text-2xl font-bold">Varun KV</h1>
+      <a href="/" class="text-2xl font-bold hover:text-yellow-300 transition-colors">Varun Kammanni</a>
       <ul class="flex space-x-6">
         <li><a href="/" class="hover:text-yellow-300">Home</a></li>
         <li><a href="projects.html" class="hover:text-yellow-300">Projects</a></li>
