--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class="bg-gray-50 font-sans text-black">
   <nav class="bg-black text-white p-4 shadow-md">
     <div class="container mx-auto flex justify-between items-center">
-      <h1 class="text-2xl font-bold">Varun Kammanni</h1>
+      <a href="/" class="text-2xl font-bold hover:text-yellow-300 transition-colors">Varun Kammanni</a>
       <ul class="flex space-x-6">
         <li><a href="pages/" class="hover:text-yellow-300">Home</a></li>
         <li><a href="pages/projects.html" class="hover:text-yellow-300">Projects</a></li>
@@ -25,13 +25,13 @@
     </div>
   </nav>
 
-  <section class="flex justify-center items-center min-h-[80vh]">
-    <div class="bg-gray-800 text-white shadow-xl rounded-2xl p-12 max-w-3xl w-full flex flex-col items-center">
+  <section class="w-full min-h-[80vh] bg-gray-800 flex justify-center items-center">
+    <div class="text-white shadow-xl rounded-none p-12 max-w-3xl w-full flex flex-col items-center">
       <h2 class="text-4xl font-extrabold mb-4 text-center">Varun Kammanni</h2>
       <p class="text-xl mb-6 text-center font-semibold">Data Analyst & Insights Expert</p>
       <div class="text-center">
-        <p class="text-lg mb-4">Experienced Data Analyst with over 6 years of combined expertise in project management and data analysis, with a strong focus on the healthcare, staffing, retail, and finance industries. Skilled in SQL, Python, Tableau, and Power BI, I specialize in uncovering actionable insights, streamlining operations, and building impactful dashboards that drive informed decision-making.</p>
-        <p class="text-lg"> I have a proven track record of reducing render delays by 30% and enhancing ETL processes for better performance and efficiency. Certified in AWS and Tableau, I bring a data-driven mindset combined with the ability to communicate findings effectively to both technical and non-technical stakeholders.</p>
+        <p class="text-base mb-4">Experienced Data Analyst with over 6 years of combined expertise in project management and data analysis, with a strong focus on the healthcare, staffing, retail, and finance industries. Skilled in SQL, Python, Tableau, and Power BI, I specialize in uncovering actionable insights, streamlining operations, and building impactful dashboards that drive informed decision-making.</p>
+        <p class="text-base"> I have a proven track record of reducing render delays by 30% and enhancing ETL processes for better performance and efficiency. Certified in AWS and Tableau, I bring a data-driven mindset combined with the ability to communicate findings effectively to both technical and non-technical stakeholders.</p>
       </div>
       <a href="pages/projects.html" class="mt-10 bg-yellow-400 text-blue-900 px-10 py-4 rounded-lg font-bold text-lg shadow-md transition-transform duration-200 hover:scale-110 hover:bg-yellow-500 focus:outline-none focus:ring-2 focus:ring-yellow-300">Projects</a>
     </div>
