--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
   </style>
 </head>
 <body class="bg-gray-50 font-sans text-black">
-  <nav class="bg-black text-white p-4 shadow-md">
+  <nav class="bg-black text-white p-4 shadow-md fixed top-0 left-0 w-full z-50">
     <div class="container mx-auto flex justify-between items-center">
       <a href="/" class="text-2xl font-bold hover:text-yellow-300 transition-colors">Varun Kammanni</a>
       <ul class="flex space-x-6">
-        <li><a href="pages/" class="hover:text-yellow-300">Home</a></li>
+        <li><a href="pages/" class="hover:text-yellow-100">Home</a></li>
         <li><a href="pages/projects.html" class="hover:text-yellow-300">Projects</a></li>
-        <li><a href="#contact" class="hover:text-yellow-300">Contact</a></li>
+        <li><a href="#contact" class="hover:text-yellow-100">Contact</a></li>
       </ul>
     </div>
   </nav>
 
-  <section class="w-full min-h-[80vh] bg-gray-800 flex justify-center items-center">
+  <section class="w-full min-h-[80vh] bg-gray-800 flex justify-center items-center pt-24">
     <div class="text-white shadow-xl rounded-none p-12 max-w-3xl w-full flex flex-col items-center">
       <h2 class="text-4xl font-extrabold mb-4 text-center">Varun Kammanni</h2>
       <p class="text-xl mb-6 text-center font-semibold">Data Analyst & Insights Expert</p>
