--- a/pages/projects.html
+++ b/pages/projects.html
@@ -14,7 +14,7 @@
   </style>
 </head>
 <body class="bg-gray-50 font-sans text-gray-800">
-  <nav class="bg-black text-white p-4 shadow-md">
+  <nav class="bg-black text-white p-4 shadow-md fixed top-0 left-0 w-full z-50">
     <div class="container mx-auto flex justify-between items-center">
       <a href="/" class="text-2xl font-bold hover:text-yellow-300 transition-colors">Varun Kammanni</a>
       <ul class="flex space-x-6">
@@ -25,7 +25,7 @@
     </div>
   </nav>
 
-  <section class="py-20 bg-white shadow-md rounded-lg mt-8 mb-8">
+  <section class="py-20 bg-white shadow-md rounded-lg mt-8 mb-8 pt-24">
     <div class="container mx-auto px-6">
       <h3 class="text-4xl font-bold text-center text-teal-700 mb-12">My Projects</h3>
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-10 justify-items-center">
