--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="text-white shadow-xl rounded-none p-12 max-w-3xl w-full flex flex-col items-center">
       <h2 class="text-4xl font-extrabold mb-4 text-center">Varun Kammanni</h2>
       <p class="text-xl mb-6 text-center font-semibold">Data Analyst & Insights Expert</p>
-      <div class="text-center">
+      <div class="w-full text-center px-2 max-w-5xl mx-auto">
         <p class="text-base mb-4">Experienced Data Analyst with over 6 years of combined expertise in project management and data analysis, with a strong focus on the healthcare, staffing, retail, and finance industries. Skilled in SQL, Python, Tableau, and Power BI, I specialize in uncovering actionable insights, streamlining operations, and building impactful dashboards that drive informed decision-making.</p>
         <p class="text-base"> I have a proven track record of reducing render delays by 30% and enhancing ETL processes for better performance and efficiency. Certified in AWS and Tableau, I bring a data-driven mindset combined with the ability to communicate findings effectively to both technical and non-technical stakeholders.</p>
       </div>
