--- a/index.html
+++ b/index.html
@@ -40,31 +40,31 @@
   <section id="resume" class="py-20 bg-white shadow-md rounded-lg mt-8 mb-8">
     <div class="container mx-auto px-6">
       <h3 class="text-4xl font-bold text-center text-teal-700 mb-12">Resume Summary</h3>
-      <div class="grid grid-cols-1 lg:grid-cols-2 gap-10 justify-items-center">
-        <div class="bg-gray-50 p-6 rounded-lg shadow-md w-full max-w-md">
+      <div class="flex flex-col gap-10 items-center text-center">
+        <div class="w-full max-w-2xl">
           <h4 class="text-2xl font-semibold text-blue-900 mb-4">Experience</h4>
           <p class="font-medium">Data Analyst (VFX) - 2022-Present</p>
-          <ul class="list-disc list-inside mb-4">
-            <li>Optimized SQL queries, cutting render delays by 30%.</li>
-            <li>Developed Tableau/Power BI dashboards for performance tracking.</li>
-            <li>Conducted A/B tests with Python (pandas, numpy).</li>
+          <ul class="list-disc list-inside mb-4 flex flex-col items-center">
+            <li class="text-left w-full max-w-xl">Optimized SQL queries, cutting render delays by 30%.</li>
+            <li class="text-left w-full max-w-xl">Developed Tableau/Power BI dashboards for performance tracking.</li>
+            <li class="text-left w-full max-w-xl">Conducted A/B tests with Python (pandas, numpy).</li>
           </ul>
           <p class="font-medium">PMO Analyst | Data Analyst, Cognizant - 2014-2020</p>
-          <ul class="list-disc list-inside">
-            <li>Enhanced Healthnet queries with SQL, reducing times by 20%.</li>
-            <li>Built Python tools for patient insights.</li>
-            <li>Ensured 90% IT uptime.</li>
+          <ul class="list-disc list-inside flex flex-col items-center">
+            <li class="text-left w-full max-w-xl">Enhanced Healthnet queries with SQL, reducing times by 20%.</li>
+            <li class="text-left w-full max-w-xl">Built Python tools for patient insights.</li>
+            <li class="text-left w-full max-w-xl">Ensured 90% IT uptime.</li>
           </ul>
         </div>
-        <div class="bg-gray-50 p-6 rounded-lg shadow-md w-full max-w-md">
+        <div class="w-full max-w-2xl">
           <h4 class="text-2xl font-semibold text-blue-900 mb-4">Education & Certifications</h4>
           <p class="font-medium">Master's Degree, University of West London (2019-20)</p>
           <p class="font-medium">Bachelor of Engineering, VTU (2014)</p>
-          <ul class="list-disc list-inside mt-4">
-            <li>AWS Certified Solutions Architect - Associate</li>
-            <li>Microsoft Certified: Power BI Data Analyst</li>
-            <li>Fundamentals of AI by IBM</li>
-            <li>Cognizant: Python, Unix/Linux, SQL</li>
+          <ul class="list-disc list-inside mt-4 flex flex-col items-center">
+            <li class="text-left w-full max-w-xl">AWS Certified Solutions Architect - Associate</li>
+            <li class="text-left w-full max-w-xl">Microsoft Certified: Power BI Data Analyst</li>
+            <li class="text-left w-full max-w-xl">Fundamentals of AI by IBM</li>
+            <li class="text-left w-full max-w-xl">Cognizant: Python, Unix/Linux, SQL</li>
           </ul>
         </div>
       </div>
